fix overflow due to gallery item min size

--- a/source/style/main.css
+++ b/source/style/main.css
@@ -153,8 +153,9 @@ nav a {
 
 .gallery {
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+    grid-template-columns: repeat(auto-fill, minmax(auto, 300px));
     gap: 1em;
+    justify-content: center;
 }
 
 .gallery > a {
